# DIR825_G1_V7.12B01

./: BaseVar.mk  Config.in  INSTALL  Makefile  patch_all.txt  quicktarget.mk
GplMakeCode/: GplMakeCodefile.sh  INSTALL  release_dir  tarProduct  test.sh  test1.sh  testBuild.sh
GplMakeCode/gpl_.c/scripts/: mconf.c
GplMakeCode/gpl_config/board/: BoardConfig.in
GplMakeCode/gpl_config/driver/: Config.in
GplMakeCode/gpl_config/opensource/: Config.in
GplMakeCode/gpl_install/toolchain/: README
GplMakeCode/gpl_install/top-level/: BT-Repeater_Information.xls  INSTRUCTION
GplMakeCode/gpl_makefile/apps/: Makefile
GplMakeCode/gpl_makefile/boot/: Makefile  config.mk
GplMakeCode/gpl_makefile/kernel/: Makefile
GplMakeCode/gpl_makefile/opensource/: Makefile  Makefile_nbns  Makefile_nbsmtp  Makefile_siproxd
GplMakeCode/gpl_makefile/tools/: mkbuilddir
product/RTL8197DN_AC1200/: app_btn_cfg.c  arch.mk  config_flash.xml  defconfig  getverinfo.sh  hidenPage.sh  mkdev.sh  product.c  releasenotes.html  tcsupport.mk
product/RTL8197DN_AC1200/init.d/: network.rc
product/RTL8197DN_AC1200/modules.d/: 11ac
scripts/: Makefile  confdata.c  lkc.h
scripts/lxdialog/: Makefile
src/apps/: Config.debug.in  Config.in  Makefile
src/apps/cli/: Makefile
src/apps/cmddaemon/: Config.in  Makefile  cmddaemon.c  cmddaemon.h
src/apps/html/: Config.in  Makefile  autoupgrade.asp  config.html  factory_mode.html  genTestVersion.sh  genVersionPage.sh  html.c  index.html  lnk.sh  twrouteinfo.html  webAuth.xml
src/apps/include/: btn_app.h  common.h  ipt_common.h  tbserror.h  tbsmsg.h  tbstype.h  tbsutil.h  warnlog.h
src/apps/ipv6/: Makefile  ifip6  ip6aac  ip6mon  ramon
src/apps/logic/: Config.in  Makefile  config.xml  config_full.xml  logic
src/apps/ssap/: Config.in
src/apps/supp/: supp
src/apps/tr064fe/: main.c
src/apps/tr069fe/: Config.in  Makefile
src/apps/upgcgi/: webupg
src/apps/web/: Config.in  Makefile  lang  langlist  modlist  webproc
src/boot/: Makefile
src/driver/: Makefile
src/driver/gemac/: Makefile  gemac.c  gemac.h  rtk_api.c  rtk_api.h  rtk_api_ext.h  rtk_error.h  rtk_types.h  rtl8367b_asicdrv.c  rtl8367b_asicdrv.h  (+62 more)
src/include/: btn.h  flash_layout.h  gpio.h  led.h  nfmark.h  spi_flash.h  tbs_address.h  tbs_ioctl.h  tbs_watchdog.h  utm_nat_nf.h
src/kernel/: Config.in  Makefile
src/opensource/: Config.in  Makefile
src/opensource/nbsmtp/nbsmtp-1.00/: AUTHORS  ChangeLog  DOCS  Doxyfile.in  INSTALL  Makefile  Makefile.in  README.OSX  base64.c  configure  configure.in  cvs2cl.pl  fdutil.c  fdutil.h  fileconfig.c  fileconfig.h  hmac_md5.c  hmac_md5.h  main.c  nbsmtp.8  nbsmtp.c  nbsmtp.h  nbsmtprc.5  original.c  original.h  osx.c  osx.h  servinfo.h  smtp.c  smtp.h  util.c  util.h
tools/: buildImage.sh  mksymlink  rsdk-linux-lstrip  sed_strip_type.script  sourcedir.sh
tools/src/: Makefile
(+2469 files in other folders)
